--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,8 +23,6 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-
-
 .loader {
   color: #fff;
   font-size: 10px;
@@ -37,11 +35,12 @@
   transform: translateZ(0);
 }
 
+
 @keyframes mulShdSpin {
   0%,
   100% {
     box-shadow: 0 -3em 0 0.2em,
-    2em -2em 0 0em, 3em 0 0 -1em,
+    2em -2em 0 0, 3em 0 0 -1em,
     2em 2em 0 -1em, 0 3em 0 -1em,
     -2em 2em 0 -1em, -3em 0 0 -1em,
     -2em -2em 0 0;
@@ -61,13 +60,13 @@
   }
   37.5% {
     box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-    3em 0em 0 0, 2em 2em 0 0.2em, 0 3em 0 0em,
-    -2em 2em 0 -1em, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    3em 0 0 0, 2em 2em 0 0.2em, 0 3em 0 0,
+    -2em 2em 0 -1em, -3em 0 0 -1em, -2em -2em 0 -1em;
   }
   50% {
     box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
-    3em 0 0 -1em, 2em 2em 0 0em, 0 3em 0 0.2em,
-    -2em 2em 0 0, -3em 0em 0 -1em, -2em -2em 0 -1em;
+    3em 0 0 -1em, 2em 2em 0 0, 0 3em 0 0.2em,
+    -2em 2em 0 0, -3em 0 0 -1em, -2em -2em 0 -1em;
   }
   62.5% {
     box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
@@ -75,14 +74,14 @@
     -2em 2em 0 0.2em, -3em 0 0 0, -2em -2em 0 -1em;
   }
   75% {
-    box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em,
-    3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
-    -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0;
+    box-shadow: 0 -3em 0 -1em, 2em -2em 0 -1em,
+    3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
+    -2em 2em 0 0, -3em 0 0 0.2em, -2em -2em 0 0;
   }
   87.5% {
-    box-shadow: 0em -3em 0 0, 2em -2em 0 -1em,
+    box-shadow: 0 -3em 0 0, 2em -2em 0 -1em,
     3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em,
-    -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
+    -2em 2em 0 0, -3em 0 0 0, -2em -2em 0 0.2em;
   }
 }
 
